--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>長照額度計算機（嚴格分段管制版）</title>
+<title>長照額度計算機（202512）</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
 <style>
@@ -1166,3 +1166,4 @@ function downloadImage() {
 </script>
 </body>
 </html>
+
