--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ button.action-btn {
   <h3>2. 介接前使用 (B+C)</h3>
   <div class="batch-container">
     <div id="batchPreList"></div>
-    <div style="margin-top:10px;"><input type="number" id="batchPreCount" placeholder="本月總次數"></div>
+    <div style="margin-top:10px;"><input type="number" id="batchPreCount" placeholder="本月介接前使用次數"></div>
     <button type="button" class="add-btn" onclick="applyBatchPre()">➕ 加入清單</button>
   </div>
   <div class="added-list-container"><div style="font-weight:bold; margin-bottom:5px;">已加入清單：</div><div id="preItems"></div></div>
@@ -451,7 +451,7 @@ button.action-btn {
   <h3>2. 介接後使用 (B+C)</h3>
   <div class="batch-container">
     <div id="batchPostList"></div>
-    <div style="margin-top:10px;"><input type="number" id="batchPostCount" placeholder="本月總次數"></div>
+    <div style="margin-top:10px;"><input type="number" id="batchPostCount" placeholder="本月介接後使用次數"></div>
     <button type="button" class="add-btn" onclick="applyBatchPost()">➕ 加入清單</button>
   </div>
   <div class="added-list-container"><div style="font-weight:bold; margin-bottom:5px;">已加入清單：</div><div id="postItems"></div></div>
@@ -961,3 +961,4 @@ function copyToClipboard() {
 </script>
 </body>
 </html>
+
