--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ button.action-btn {
       <div>💬 傳送給 Line 好友<span class="btn-note">將文字摘要傳送至 Line</span></div>
     </button>
     <button class="action-btn btn-copy" onclick="copyToClipboard()">
-      <div>📋 複製結果 (官方帳號用)<span class="btn-note">複製後可將文字摘要貼上到其他APP</span></div>
+      <div>📋 複製結果 (官方帳號用)<span class="btn-note">複製後可將文字摘要貼至其他APP</span></div>
     </button>
     
     <button class="action-btn btn-img" onclick="generateImage('resultPart1')">
@@ -961,4 +961,5 @@ function copyToClipboard() {
 </script>
 </body>
 </html>
+
 
